--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,6 +25,7 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   db-data:
