update file paths

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,7 +1,7 @@
 # Stage 1: Build the React app in a Node 20 environment
 FROM node:20.17 AS build
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
@@ -15,7 +15,7 @@ RUN npm run build
 FROM nginx:1.27-alpine
 
 # Copy the built app to Nginx's default public directory
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
