--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,7 +1,7 @@
 # Use the official Node.js image as a base
 FROM node:20.17
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
