--- a/.devcontainer/backend/devcontainer.json
+++ b/.devcontainer/backend/devcontainer.json
@@ -14,7 +14,7 @@
 
   // The optional 'workspaceFolder' property is the path VS Code should open by default when
   // connected. This is typically a file mount in .devcontainer/docker-compose.yml
-  "workspaceFolder": "/app",
+  "workspaceFolder": "/app/backend",
 
   "mounts": ["type=bind,source=../../backend,target=/backend"],
 
@@ -28,7 +28,9 @@
   // "runServices": [],
 
   // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
-  // "shutdownAction": "none"
+  // Optional, but will leave the containers running when VS Code closes
+  // which prevents you from accidentally shutting down both containers by closing one window.
+  "shutdownAction": "none",
 
   // Uncomment the next line to run commands after the container is created.
   // "postCreateCommand": "echo 'test'"
