--- a/.devcontainer/frontend/devcontainer.json
+++ b/.devcontainer/frontend/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-docker-compose
 {
-  "name": "fontend",
+  "name": "frontend",
 
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
@@ -14,7 +14,7 @@
 
   // The optional 'workspaceFolder' property is the path VS Code should open by default when
   // connected. This is typically a file mount in .devcontainer/docker-compose.yml
-  "workspaceFolder": "/app",
+  "workspaceFolder": "/app/frontend",
 
   "mounts": ["type=bind,source=../../frontend,target=/frontend"],
 
@@ -28,7 +28,9 @@
   // "runServices": [],
 
   // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
-  // "shutdownAction": "none"
+  // Optional, but will leave the containers running when VS Code closes
+  // which prevents you from accidentally shutting down both containers by closing one window.
+  "shutdownAction": "none",
 
   // Uncomment the next line to run commands after the container is created.
   // "postCreateCommand": "echo 'test'"
