--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,5 +1,4 @@
-# Use the official Node.js image as a base
-FROM node:20.17
+FROM mcr.microsoft.com/devcontainers/javascript-node:20
 
 WORKDIR /app
 
