--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/devcontainers/javascript-node:20
 
+# Everything below gets ignored by devcontainer.json,
+# but can still be used by docker-compose
+
 WORKDIR /app
 
 # Install dependencies
@@ -11,4 +14,5 @@ COPY . .
 
 EXPOSE 3000
 
+# Command to run the application
 CMD ["npm", "run", "dev"]
