--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,9 +5,9 @@
   // List of extensions which should be recommended for users of this workspace.
   "recommendations": [
     "ms-vscode-remote.remote-containers",
-    // "dbaeumer.vscode-eslint", @TODO: set up eslint
-    "esbenp.prettier-vscode"
-    // "editorconfig.editorconfig", @TODO: set up editorconfig
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "editorconfig.editorconfig"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": [
