--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
     "eslint": "^9.9.1",
+    "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
