--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@fastify/autoload": "^5.10.0",
     "fastify": "^4.28.1",
-    "pg-promise": "^11.9.1"
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.9.1",
+    "sequelize": "^6.37.3"
   },
   "engines": {
     "node": "20.x"
