--- a/backend/package.json
+++ b/backend/package.json
@@ -15,17 +15,15 @@
     "eslint": "^9.9.1",
     "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "prettier": "3.3.3"
   },
   "dependencies": {
-    "@fastify/autoload": "^5.10.0",
-    "fastify": "^4.28.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "pg-promise": "^11.9.1",
     "sequelize": "^6.37.3"
   },
   "engines": {
