--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "prettier": "3.3.3"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
