--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,13 +16,19 @@
     "eslint": "^9.9.1",
     "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "prettier": "3.3.3"
   },
   "dependencies": {
-    "pg-promise": "^11.9.1"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "engines": {
     "node": "20.x"
