--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "sass-embedded": "^1.78.0",
     "vite": "^5.4.1"
   },
   "engines": {
