--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "react": "^18.3.1",
