--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "react": "^18.3.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "sass-embedded": "^1.78.0",
     "vite": "^5.4.1"
   },
   "engines": {
