--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.5",
+    "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-oidc-context": "^3.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "sass-embedded": "^1.78.0",
