--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "sass-embedded": "^1.78.0",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -29,9 +31,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "prettier": "3.3.3",
-    "sass-embedded": "^1.78.0",
-    "vite": "^5.4.1"
+    "prettier": "3.3.3"
   },
   "engines": {
     "node": "20.x"
