--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - alpha
 
 concurrency:
   group: build-dev-${{ github.ref_name }}
@@ -13,7 +14,7 @@ jobs:
   build-frontend:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: react-frontend
+      IMAGE_NAME: frontend-${{ github.ref_name }}
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -35,7 +36,7 @@ jobs:
         with:
           node-version: "18"
 
-      - name: npm build
+      - name: Legacy npm build
         run: |
           npm install
           npm run build
@@ -49,9 +50,39 @@ jobs:
 
       - name: Push Docker image
         run: docker push --all-tags ${{ env.REGISTRY_IMAGE }}
+
+  build-backend:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: backend-${{ github.ref_name }}
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+
+      - name: Set env
+        run: |
+          echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "REGISTRY_IMAGE=${{ vars.OPENSHIFT_EXTERNAL_REPOSITORY }}/${{ vars.OPENSHIFT_LICENSE_PLATE }}-tools/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
+
+      - name: Login to OpenShift Container Repository
+        uses: docker/login-action@v3
+        with:
+          registry: ${{vars.OPENSHIFT_EXTERNAL_REPOSITORY}}
+          username: ${{vars.OPENSHIFT_SA_USERNAME}}
+          password: ${{secrets.OPENSHIFT_SA_PASSWORD}}
+
+      - name: Docker build
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }} -f Dockerfile.prod .
+          docker tag ${{ env.IMAGE_NAME }} ${{ env.REGISTRY_IMAGE }}:latest
+          docker tag ${{ env.IMAGE_NAME }} ${{ env.REGISTRY_IMAGE }}:${{ env.SHORT_SHA }}
+        working-directory: backend
+
+      - name: Push Docker image
+        run: docker push --all-tags ${{ env.REGISTRY_IMAGE }}
 #  deploy:
 #    runs-on: ubuntu-latest
-#    needs: [build-cms, build-admin]
+#    needs: [build-frontend, build-backend]
 #    steps:
 #      - name: Git Checkout
 #        uses: actions/checkout@v3
@@ -64,4 +95,4 @@ jobs:
 #
 #      - name: Trigger rollout
 #        run: |
-#          oc -n ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-dev rollout restart deployment ${{ github.ref_name }}-admin
+#          oc -n ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-dev rollout restart deployment ${{ github.ref_name }}-frontend
