--- a/helm/tools/templates/imagestreams/backend-main.yaml
+++ b/helm/tools/templates/imagestreams/backend-main.yaml
@@ -1,9 +1,9 @@
 kind: ImageStream
 apiVersion: image.openshift.io/v1
 metadata:
-  name: react-frontend-legacy
+  name: backend-main
   annotations:
-    description: BC Parks Staff Portal (legacy)
+    description: BC Parks Staff Portal (backend)
   labels:
     release: {{ .Release.Name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
