--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -30,6 +30,8 @@ ADD frontend-legacy/build $APP_ROOT
 RUN chmod +x /entrypoint.sh
 RUN chgrp -R 0 $APP_ROOT && chmod -R g=u $APP_ROOT
 
+EXPOSE 3000
+
 USER 1001
 
 CMD ["/entrypoint.sh"]
