--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -12,7 +12,7 @@ COPY ./frontend .
 RUN npm run build
 
 # Stage 2: Serve the React app with Caddy
-FROM caddy:2.8-alpine
+FROM caddy:2.6-alpine
 
 ENV APP_ROOT=/usr/share/caddy
 ENV XDG_CONFIG_HOME=/tmp/config
@@ -27,10 +27,10 @@ ADD frontend-legacy/entrypoint.sh /entrypoint.sh
 ADD frontend-legacy/build $APP_ROOT
 
 # Fix permissions
-RUN chmod +x /entrypoint.sh
-RUN chgrp -R 0 $APP_ROOT && chmod -R g=u $APP_ROOT
+#R UN chmod +x /entrypoint.sh
+# RUN chgrp -R 0 $APP_ROOT && chmod -R g=u $APP_ROOT
 
-EXPOSE 3000
+# EXPOSE 3000
 
 # USER 1001
 
