--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.5",
     "oidc-client-ts": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.1.0",
