--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/v2/",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
