--- a/helm/deployment/values.yaml
+++ b/helm/deployment/values.yaml
@@ -1,5 +1,5 @@
 cluster:
-  domain: apps.gold.devops.gov.bc.ca
+  domain: apps.silver.devops.gov.bc.ca
   ssoAuthUrl: https://dev.loginproxy.gov.bc.ca/auth
   ssoRealm: bcparks-service-transformation
   ssoClientId: staff-portal
@@ -8,6 +8,9 @@ images:
   frontend:
     name: image-registry.openshift-image-registry.svc:5000/a7dd13-tools/frontend-main
     tag: latest
+  backend:
+    name: image-registry.openshift-image-registry.svc:5000/a7dd13-tools/backend-main
+    tag: latest
 
 frontend:
   imagePullPolicy: Always
@@ -15,7 +18,7 @@ frontend:
   componentName: frontend
 
   env:
-    externalUrl: https://dev-staff.bcparks.ca
+    externalUrl: https://main-frontend-a7dd13-dev.apps.silver.devops.gov.bc.ca/
 
   resources:
     limits:
@@ -28,3 +31,30 @@ frontend:
   service:
     portName: frontend
     port: 3000
+
+backend:
+  componentName: backend
+
+  imagePullPolicy: Always
+
+  resources:
+    limits:
+      cpu: 400m
+      memory: 1250Mi
+    requests:
+      cpu: 75m
+      memory: 250Mi
+
+  env:
+    nodeEnv: production
+    dbServer: crunchy-postgres-pgbouncer
+    dbPort: 5432
+
+  service:
+    portName: express
+    port: 8000
+
+  hpa:
+    minReplicas: 1
+    maxReplicas: 2
+    cpuUtilizationThreshold: 125
