CMS-345: Fix backend errors

--- a/helm/deployment/templates/secrets/postgres-secret.yaml
+++ b/helm/deployment/templates/secrets/postgres-secret.yaml
@@ -16,6 +16,6 @@ metadata:
     "helm.sh/hook-delete-policy": "before-hook-creation"
     "helm.sh/hook-weight": "0"
 stringData:
-  POSTGERS_USERNAME: staff-portal-user
+  POSTGRES_USERNAME: staff-portal-user
   POSTGRES_PASSWORD: {{ $random_postgres_app_password | quote }}
 {{- end -}}
