--- a/helm/deployment/templates/secrets/postgres-secret.yaml
+++ b/helm/deployment/templates/secrets/postgres-secret.yaml
@@ -4,18 +4,16 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: {{ template "bcparks_postgres_fullname" . }}
-    cluster-name: {{ template "bcparks_postgres_fullname" . }}
     component: crunchy-postgres
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
-  name: {{ template "bcparks_postgres_fullname" . }}-secret
+  name: {{ .Release.Name }}-postgres-secret
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-delete-policy": "before-hook-creation"
     "helm.sh/hook-weight": "0"
 stringData:
-  POSTGRES_USERNAME: staff-portal-user
+  POSTGRES_USERNAME: bcparks-{{ .Release.Name }}
   POSTGRES_PASSWORD: {{ $random_postgres_app_password | quote }}
 {{- end -}}
