CMS-345: Added vanity routes

--- a/helm/deployment/values-dev.yaml
+++ b/helm/deployment/values-dev.yaml
@@ -3,9 +3,13 @@ cluster:
 
 frontend:
   env:
-    externalUrl: https://main-frontend-a7dd13-dev.apps.silver.devops.gov.bc.ca
+    externalUrl: https://dev-staff.bcparks.ca
     publicUrl: https://dev.bcparks.ca
 
 backend:
   env:
-    externalUrl: https://main-backend-a7dd13-dev.apps.silver.devops.gov.bc.ca
+    externalUrl: https://dev-staff-api.bcparks.ca
+
+cms:
+  env:
+    externalUrl: https://dev-cms.bcparks.ca
