--- a/helm/deployment/values-prod.yaml
+++ b/helm/deployment/values-prod.yaml
@@ -13,3 +13,7 @@ frontend:
 backend:
   env:
     externalUrl: https://staff-backend.bcparks.ca
+
+cms:
+  env:
+    externalUrl: https://cms.bcparks.ca
