--- a/helm/deployment/templates/frontend/frontend-deployment.yaml
+++ b/helm/deployment/templates/frontend/frontend-deployment.yaml
@@ -35,10 +35,10 @@ spec:
               containerPort: {{ .Values.frontend.service.port }}
               protocol: TCP
           env:
+            - name: REACT_APP_CMS_BASE_URL
+              value: {{ .Values.cms.env.externalUrl }}
             - name: REACT_APP_FRONTEND_BASE_URL
               value: {{ .Values.frontend.env.externalUrl }}
-            - name: REACT_APP_CMS_BASE_URL
-              value: {{ .Values.backend.env.externalUrl }}
             - name: REACT_APP_KEYCLOAK_AUTH_URL
               value: {{ .Values.cluster.ssoAuthUrl }}
             - name: REACT_APP_KEYCLOAK_REALM
