CMS-345: Helm chart and doc updates

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# crunchy-postgres helm files (from https://github.com/bcgov/crunchy-postgres/tree/main/charts/crunchy-postgres)
+helm/crunchy-postgres/.helmignore
+helm/crunchy-postgres/Chart.yaml
+helm/crunchy-postgres/templates/
+helm/crunchy-postgres/values.yaml
