--- a/helm/crunchy-postgres/values-prod.yaml
+++ b/helm/crunchy-postgres/values-prod.yaml
@@ -1,5 +1,9 @@
 instances:
-  replicas: 1
+  replicas: 3
+
+proxy:
+  pgBouncer:
+    replicas: 2
 
 pgmonitor:
   namespace: a7dd13 #The high level namespace of your project without the -tools -dev, etc part.
