--- a/helm/deployment/values-test.yaml
+++ b/helm/deployment/values-test.yaml
@@ -1,8 +1,11 @@
 cluster:
   ssoAuthUrl: https://test.loginproxy.gov.bc.ca/auth
+  cmsUrl: https://test-cms.bcparks.ca
 
 images:
   frontend:
+    tag: test
+  backend:
     tag: test
 
 frontend:
@@ -12,8 +15,4 @@ frontend:
 
 backend:
   env:
-    externalUrl: https://test-staff-backend.bcparks.ca
-
-cms:
-  env:
-    externalUrl: https://test-cms.bcparks.ca
+    externalUrl: https://test-staff-api.bcparks.ca
