CMS-345: Add extra github workflows

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -80,19 +80,20 @@ jobs:
 
       - name: Push Docker image
         run: docker push --all-tags ${{ env.REGISTRY_IMAGE }}
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: [build-frontend, build-backend]
-#    steps:
-#      - name: Git Checkout
-#        uses: actions/checkout@v3
-#
-#      - name: Login OpenShift
-#        uses: redhat-actions/oc-login@v1
-#        with:
-#          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
-#          openshift_token: ${{ secrets.OPENSHIFT_SERVICE_TOKEN }}
-#
-#      - name: Trigger rollout
-#        run: |
-#          oc -n ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-dev rollout restart deployment ${{ github.ref_name }}-frontend
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build-frontend, build-backend]
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+
+      - name: Login OpenShift
+        uses: redhat-actions/oc-login@v1
+        with:
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
+          openshift_token: ${{ secrets.OPENSHIFT_SERVICE_TOKEN }}
+
+      - name: Trigger rollout
+        run: |
+          oc -n ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-dev rollout restart deployment ${{ github.ref_name }}-frontend
+          oc -n ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-dev rollout restart deployment ${{ github.ref_name }}-backend
