--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -8,9 +8,9 @@ on:
         required: true
 
 env:
-  TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-tools
+  TOOLS_NAMESPACE: ${{ vars.OPENSHIFT_LICENSE_PLATE }}-tools
   ENVIRONMENT: test
-  NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-test
+  NAMESPACE: ${{ vars.OPENSHIFT_LICENSE_PLATE }}-test
 
 jobs:
   deploy:
@@ -30,7 +30,7 @@ jobs:
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
+          openshift_server_url: ${{ vars.OPENSHIFT_SERVER_URL }}
           openshift_token: ${{ secrets.OPENSHIFT_SERVICE_TOKEN }}
 
       - name: Tag Test images
