--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -8,9 +8,9 @@ on:
         required: true
 
 env:
-  TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-tools
+  TOOLS_NAMESPACE: ${{ vars.OPENSHIFT_LICENSE_PLATE }}-tools
   ENVIRONMENT: prod
-  NAMESPACE: ${{ secrets.OPENSHIFT_LICENSE_PLATE }}-prod
+  NAMESPACE: ${{ vars.OPENSHIFT_LICENSE_PLATE }}-prod
 
 jobs:
   deploy:
@@ -27,13 +27,10 @@ jobs:
           echo "::error::Git Tag not found, please double check input"
           exit 1
 
-      - name: Set env
-        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
+          openshift_server_url: ${{ vars.OPENSHIFT_SERVER_URL }}
           openshift_token: ${{ secrets.OPENSHIFT_SERVICE_TOKEN }}
 
       - name: Tag Prod images
