CMS-409: Install AdminJs

--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -1,5 +1,14 @@
 # JSON Web Key Set (JWKS) endpoint
-JWKS_URI=https://<KEYCLOAK-SERVER>/auth/realms/<KEYCLOAK-REALM>/protocol/openid-connect/certs
+JWKS_URI="https://<KEYCLOAK-SERVER>/auth/realms/<KEYCLOAK-REALM>/protocol/openid-connect/certs"
 
 # Keycloak OICD authority
-JWT_ISSUER=https://<KEYCLOAK-SERVER>/auth/realms/<KEYCLOAK-REALM>
+JWT_ISSUER="https://<KEYCLOAK-SERVER>/auth/realms/<KEYCLOAK-REALM>"
+
+# AdminJS login credentials
+ADMIN_USER="admin"
+ADMIN_PASSWORD="some random string"
+
+# Session/cookie secrets: change these to invalidate active sessions
+ADMIN_COOKIE_NAME="adminjs"
+ADMIN_COOKIE_PASSWORD="another random string"
+ADMIN_SESSION_SECRET="another random string"
