--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express-async-handler": "^1.2.0",
     "express-formidable": "^1.2.0",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "jwks-rsa": "^3.1.0",
