NOBUG: Add oc tools installer action

--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -27,6 +27,11 @@ jobs:
           echo "::error::Git Tag not found, please double check input"
           exit 1
 
+      - name: Install OpenShift CLI tools
+        uses: redhat-actions/openshift-tools-installer@v1
+        with:
+          oc: "4.14"
+
       - name: Login OpenShift
         uses: redhat-actions/oc-login@v1
         with:
