--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@bcgov/design-tokens": "^3.1.1",
     "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.5",
