CMS-409: Add secrets template to helm chart

--- a/helm/deployment/templates/backend/backend-deployment.yaml
+++ b/helm/deployment/templates/backend/backend-deployment.yaml
@@ -50,6 +50,8 @@ spec:
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}-postgres-secret
+            - secretRef:
+                name: {{ .Release.Name }}-adminjs-secret
           readinessProbe:
             httpGet:
               path: /
