Add secret template to helm chart

--- a/helm/deployment/templates/frontend/frontend-deployment.yaml
+++ b/helm/deployment/templates/frontend/frontend-deployment.yaml
@@ -57,6 +57,9 @@ spec:
               value: {{ .Values.frontend.env.externalUrl }}/v2/
             - name: VITE_OIDC_LOGOUT_REDIRECT
               value: {{ .Values.frontend.env.externalUrl }}
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}-fontawesome-secret
           readinessProbe:
             httpGet:
               path: /
