Fix adminjs secret template in helm chart

--- a/helm/deployment/templates/secrets/adminjs-secret.yaml
+++ b/helm/deployment/templates/secrets/adminjs-secret.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    component: adminjs
+    component: {{ .Values.backend.componentName }}
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
