--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@awesome.me/kit-c1c3245051": "^1.0.4",
     "@bcgov/design-tokens": "^3.1.1",
     "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
