--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -5,11 +5,7 @@ FROM mcr.microsoft.com/devcontainers/javascript-node:1-20
 
 WORKDIR /app
 
-# Install dependencies
-COPY package*.json ./
-RUN npm install
-
-# Copy the rest of the files
+# Copy the files
 COPY . .
 
 EXPOSE 8101
