--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "dotenvx run -f .env.local --overload -- nodemon index.js",
     "start": "node index.js",
     "lint": "eslint .",
+    "migrate": "sequelize-cli db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,7 +20,8 @@
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "@adminjs/express": "^6.1.0",
