--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "axios": "^1.7.5",
+    "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "oidc-client-ts": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
