--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.1.0",
     "react-redux": "^9.1.2",
