CMS-000: Fix backend environment var name in helm chart

--- a/helm/deployment/templates/secrets/postgres-secret.yaml
+++ b/helm/deployment/templates/secrets/postgres-secret.yaml
@@ -14,6 +14,6 @@ metadata:
     "helm.sh/hook-delete-policy": "before-hook-creation"
     "helm.sh/hook-weight": "0"
 stringData:
-  POSTGRES_USERNAME: bcparks-{{ .Release.Name }}
+  POSTGRES_USER: bcparks-{{ .Release.Name }}
   POSTGRES_PASSWORD: {{ $random_postgres_app_password | quote }}
 {{- end -}}
