--- a/helm/deployment/values-alpha-dev.yaml
+++ b/helm/deployment/values-alpha-dev.yaml
@@ -2,6 +2,7 @@ cluster:
   ssoAuthUrl: https://dev.loginproxy.gov.bc.ca/auth
   cmsUrl: https://alpha-dev-cms.bcparks.ca
 
+images:
   frontend:
     name: image-registry.openshift-image-registry.svc:5000/a7dd13-tools/frontend-alpha
     tag: latest
