--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "jwks-rsa": "^3.1.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
