--- a/frontend-legacy/package.json
+++ b/frontend-legacy/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@bcgov/bc-sans": "^2.1.0",
-    "@bcgov/bootstrap-theme": "https://github.com/bcgov/bootstrap-theme/releases/download/v1.1.1/bcgov-bootstrap-theme-1.1.1.tgz",
+    "@bcgov/bootstrap-v5-theme": "^1.0.1",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "4.11.4",
     "@material-ui/data-grid": "4.0.0-alpha.22",
@@ -17,7 +17,7 @@
     "@storybook/react": "^6.1.21",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.22.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.3.3",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.4",
@@ -114,7 +114,7 @@
     "indent": 4
   },
   "overrides": {
-    "@bcgov/bootstrap-theme": {
+    "@bcgov/bootstrap-v5-theme": {
       "bootstrap": "$bootstrap"
     },
     "react-scripts": {
