--- a/frontend-legacy/package.json
+++ b/frontend-legacy/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@bcgov/bc-sans": "^2.1.0",
-    "@bcgov/bootstrap-theme": "https://github.com/bcgov/bootstrap-theme/releases/download/v1.1.1/bcgov-bootstrap-theme-1.1.1.tgz",
     "@date-io/moment": "^1.3.13",
+    "@digitalspace/bcparks-bootstrap-theme": "^1.4.6",
     "@material-ui/core": "4.11.4",
     "@material-ui/data-grid": "4.0.0-alpha.22",
     "@material-ui/icons": "^4.11.2",
@@ -17,7 +17,6 @@
     "@storybook/react": "^6.1.21",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.22.0",
-    "bootstrap": "^4.6.0",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "keycloak-js": "^12.0.4",
@@ -114,9 +113,6 @@
     "indent": 4
   },
   "overrides": {
-    "@bcgov/bootstrap-theme": {
-      "bootstrap": "$bootstrap"
-    },
     "react-scripts": {
       "node-sass": "npm:sass@^1.62"
     },
