--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@adminjs/express": "^6.1.0",
     "@adminjs/sequelize": "^4.1.1",
     "adminjs": "^7.8.13",
+    "axios": "^1.7.8",
     "compression": "^1.7.4",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
