--- a/helm/deployment/values-dev.yaml
+++ b/helm/deployment/values-dev.yaml
@@ -10,4 +10,4 @@ frontend:
 backend:
   env:
     externalUrl: https://dev-staff-api.bcparks.ca
-
+  postgresSecret: crunchy-postgres-dev-pguser-postgres
