--- a/helm/crunchy-postgres/values-dev.yaml
+++ b/helm/crunchy-postgres/values-dev.yaml
@@ -59,7 +59,7 @@ pgBackRest:
       incremental: 0 0,4,12,16,20 * * *
     volume:
       accessModes: "ReadWriteOnce"
-      storage: 1Gi
+      storage: 500Mi
       storageClassName: netapp-file-backup
   repoHost:
     requests:
