CMS-000: Update charts for test namespace

--- a/helm/deployment/values-test.yaml
+++ b/helm/deployment/values-test.yaml
@@ -16,3 +16,4 @@ frontend:
 backend:
   env:
     externalUrl: https://test-staff-api.bcparks.ca
+  postgresSecret: crunchy-postgres-pguser-postgres
