--- a/helm/deployment/values-alpha-test.yaml
+++ b/helm/deployment/values-alpha-test.yaml
@@ -18,3 +18,4 @@ frontend:
 backend:
   env:
     externalUrl: https://alpha-test-staff-api.bcparks.ca
+  postgresSecret: crunchy-postgres-pguser-postgres
