CMS-503: Update helm charts for Crunchy DB (#44)

--- a/helm/deployment/values-alpha-dev.yaml
+++ b/helm/deployment/values-alpha-dev.yaml
@@ -18,3 +18,4 @@ frontend:
 backend:
   env:
     externalUrl: https://alpha-dev-staff-api.bcparks.ca
+  postgresSecret: crunchy-postgres-pguser-postgres
